Collapsible detail row is now collapsing and expanding. Still need to fix css and transitions.

--- a/src/styles.css
+++ b/src/styles.css
@@ -38,7 +38,7 @@
     padding-left: 30px;
 }
 
-#header-row {
+.header-row {
     cursor: default;
 }
 
@@ -60,10 +60,6 @@
     text-align: center;
 }
 
-.subtable-data-row, .dropdown-menu-item {
+.subtable-data-row{
     cursor: pointer;
-}
-
-.subtable-header-row {
-    color: rgba(0, 0, 0, 0.54);
 }
